<resources>
    <string name="app_name">Manage Restaurant</string>
    <string name="title">News</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="caption">Register</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="build">Build</string>
    <string name="room">Room</string>
    <string name="building">Building</string>
    <string name="menu">MENU</string>
    <string name="time">time</string>
    <string name="namefood1">Salad</string>
    <string name="day">day</string>

    <string name="titleHaveSpace">มีช่องว่าง</string>
    <string name="messageHaveSpace">กรุณากรอกให้ครบทุกช่อง ค่ะ</string>
    <string name="titleUserFalse">User False</string>
    <string name="messageUserFalse">No This User in my Database</string>
    <string name="titlePasswordFalse">Password False</string>
    <string name="messagePasswordFalse">Please Try Again Password False</string>
    <string name="service">Service</string>
    <string name="ingredent">ingredent</string>
    <string name="checkbox1">Pork</string>
    <string name="checkbox2">Meat</string>
    <string name="food_group">Food Group</string>
    <string name="dev2">ให้ไปส่ง (ปกติให้รับเองที่ร้าน)</string>

    <string name="numberFood">1</string>
</resources>
