<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kasembhundit.kutthareeya.thiti.manageres.selectmenuActivity">

    <RelativeLayout
        android:id="@+id/menuTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/padding20">

        <TextView
            android:id="@+id/txtMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/menu"
            android:textColor="@color/textcolorPrimary"
            android:textSize="@dimen/h1"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imvLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/logout" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/txtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/menuTop"
        android:background="@color/colorLight"
        android:orientation="vertical"
        android:padding="@dimen/padding20">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textName"
            android:src="@mipmap/ic_name" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/size20" />

        <TextClock
            android:id="@+id/clockTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/size20" />

    </RelativeLayout>

    <LinearLayout

        android:id="@+id/LinerSelectMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:padding="@dimen/padding10"
        android:layout_below="@+id/txtUser"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/txtSelectMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="เลือกสั่งซื้ออาหาร"
            android:textColor="@color/textcolorPrimary"
            android:textSize="@dimen/dp25"
            android:textStyle="bold" />
           />

    </LinearLayout>

    <RelativeLayout

        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/LinerSelectMenu"
        android:layout_above="@+id/confirm"
        android:background="@color/textcolorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/padding20">


        <ImageView
            android:id="@+id/imagefood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_name" />


        <TextView
            android:id="@+id/textNamefood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imagefood"
            android:text="@string/namefood1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/size20" />

        <TextView
            android:id="@+id/txtingredent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textNamefood"
            android:text="Ingredent :"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/size20" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtingredent"
            android:text="@string/checkbox1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/size20" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkBox1"
            android:text="@string/checkbox2"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/size20" />

        <TextView
            android:id="@+id/txtTimeaccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkBox2"
            android:text="Time Accept :"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/size20" />

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTimeaccept"
            android:text="Order Now"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/size20" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Preoder"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/size20"
            android:layout_below="@+id/txtTimeaccept"
            android:layout_alignParentEnd="true"
             />

        <Button
            android:id="@+id/buttonDay"
            android:text="Day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioButton2"
            android:layout_toEndOf="@+id/radioButton1" />


        <Button
            android:text="Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonTime"
            android:layout_below="@+id/radioButton2"
            android:layout_alignParentEnd="true"
             />


    </RelativeLayout>


    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorSecondary"
        android:text="Confirm"
        android:textColor="@color/textcolorPrimary"
        android:textSize="@dimen/size20"
        android:textStyle="bold" />
</RelativeLayout>
